2007-12-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (int_error): Fix incorrect handling of va_list.

2007-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Increase the chance that ./configure will correctly
	find all the pieces of gnu libreadline under OSX 1.4.

	* src/plot3d.c src/graph3d.c src/graph3d.h:
	Make 3D code use the same mechanism as 2D (plot->title_is_suppressed)
	to control whether a key title is generated. 

2007-12-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Missing "else" in bounds calculation.
	Also fix trivial typo of v_char instead of h_char.

	* term/svg.trm (SVG_SetFont) term/gd.trm (PNG_options): Use strncpy so
	that overly long font names do not generate a segfault.

2007-12-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: More parsing problems with borderWidth

	* term/x11.trm:  Add a terminal option "set term x11 linewidth LW" 
	analogous to other terminal drivers.  All user-specified linewidths are
	multiplied by this factor.

2007-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Command line options -bw and -borderwidth were 
	being mapped to X Resource "borderwidth".  It should be "borderWidth".
	Also remove limitation that maximum linewidth is 4 pixels.

	* share/Makefile.am: Rename Gnuplot.app-defaults to Gnuplot before
	installing it.   Bug #1784379

	* src/graphics.c (place_rectangles):  If the linestyle is LT_DEFAULT,
	nevertheless check for an explicit linewidth for this rectangle.
	Bug #1833429

2007-12-08  Petr Mikulik  <mikulik@physics.muni.cz>

	New options "front" and "back" to "set colorbox" to let the box be
	drawn either after or below the image or surface.

	* src/gadgets.h src/gadgets.c: New "layer" field in color_box_struct.

	* src/graphics.c src/graph3d.c: Draw the colorbox at expected layers.

	* src/save.c src/set.c src/show.c src/tables.h src/tables.c
	docs/gnuplot.doc: The other necessary changes.
